# Nonlinear_Wave_simulations

./: CMakeLists.txt  README.md
Combinatorics/: Lemma_4.5.ipynb
Deep_Galerkin_01/: deep_galerkin_d1.ipynb  deep_galerkin_d1.py  deep_galerkin_d1_plot.py
Deep_Galerkin_01/output/: my_output.out
Deep_Galerkin_01/results/: predictions_d1.csv
Simulation_01/: Plot_history.ipynb  README.md  analytic_solution.cpp  monte_carlo_simulation.cpp
Simulation_01/output/: my_output.out
Simulation_01/results/: analytic.csv  monte_carlo.csv
Simulation_02/: Plot_history.ipynb  README.md  analytic_solution.cpp  monte_carlo_simulation.cpp
Simulation_02/output/: my_output.out
Simulation_02/results/: monte_carlo.csv
Simulation_03/: Plot_history.ipynb  README.md  analytic_solution.cpp  monte_carlo_simulation.cpp
Simulation_03/output/: my_output.out
Simulation_03/results/: monte_carlo.csv
Simulation_04/: Plot_history.ipynb  README.md  analytic_solution.cpp  monte_carlo_simulation.cpp  test.cpp
Simulation_04/output/: my_output.out
Simulation_04/results/: analytic.csv  monte_carlo.csv  monte_carlo_mean.csv  monte_carlo_runtime.csv  monte_carlo_std_error.csv  monte_carlo_variance.csv
Simulation_05/: Plot_history.ipynb  README.md  analytic_solution.cpp  monte_carlo_simulation.cpp
Simulation_05/output/: my_output.out
Simulation_05/results/: analytic.csv  monte_carlo.csv
Simulation_06/: Plot_history.ipynb  README.md  analytic_solution.cpp  monte_carlo_simulation.cpp  variance_to_std_error.py
Simulation_06/output/: my_output.out
Simulation_06/results/: analytic.csv  monte_carlo.csv  monte_carlo_mean.csv  monte_carlo_runtime.csv  monte_carlo_std_error.csv  monte_carlo_variance.csv
Simulation_07/: Plot_history.ipynb  README.md  monte_carlo_simulation.cpp
Simulation_07/output/: my_output.out
Simulation_07/results/: monte_carlo_imag.csv  monte_carlo_real.csv
Simulation_08/: Plot_history.ipynb  README.md  analytic_solution.cpp  monte_carlo_simulation.cpp
Simulation_08/output/: my_output.out
Simulation_08/results/: analytic.csv  monte_carlo.csv
Simulation_09/: Plot_history.ipynb  README.md  analytic_solution.cpp  monte_carlo_simulation.cpp
Simulation_09/output/: my_output.out
Simulation_09/results/: analytic.csv  monte_carlo.csv  monte_carlo_mean.csv  monte_carlo_runtime.csv  monte_carlo_std_error.csv  monte_carlo_variance.csv
Simulation_1/: Plot_history.ipynb  analytic_solution.cpp  monte_carlo_simulation.cpp
Simulation_1/output/: monte_carlo.csv
Simulation_10/: Plot_history.ipynb  README.md  monte_carlo_simulation.cpp
Simulation_10/output/: my_output.out
Simulation_10/results/: monte_carlo_real.csv
Simulation_11/: Plot_history.ipynb  README.md  monte_carlo_simulation.cpp
Simulation_11/output/: my_output.out
Simulation_11/results/: monte_carlo_imag.csv  monte_carlo_real.csv
Simulation_12/: Plot_history.ipynb  README.md  monte_carlo_simulation.cpp
Simulation_12/output/: my_output.out
Simulation_12/results/: monte_carlo_imag.csv  monte_carlo_real.csv
Simulation_13/: Plot_history.ipynb  Plot_history_1.ipynb  Plot_history_2.ipynb  Plot_history_3.ipynb  README.md  monte_carlo_simulation.cpp
Simulation_13/output/: my_output.out
Simulation_13/results/: monte_carlo_imag.csv  monte_carlo_real.csv
Simulation_14/: Plot_history_1.ipynb  Plot_history_2.ipynb  Plot_history_3.ipynb  README.md  monte_carlo_simulation.cpp
Simulation_14/output/: my_output.out
Simulation_14/results/: monte_carlo_imag.csv  monte_carlo_real.csv
Simulation_2/: Plot_history.ipynb  analytic_solution.cpp  monte_carlo_simulation.cpp
Simulation_2/output/: analytic.csv  monte_carlo.csv
Simulation_3/: Plot_history.ipynb  analytic_solution.cpp  monte_carlo_simulation.cpp
Simulation_3/output/: analytic.csv  monte_carlo.csv
Simulation_4/: Plot_history.ipynb  analytic_solution.cpp  monte_carlo_simulation.cpp
Simulation_4/output/: monte_carlo.csv
Simulation_5/: Plot_history.ipynb  monte_carlo_simulation.cpp  test.cpp
Simulation_5/output/: monte_carlo.csv  monte_carlo_imag.csv  monte_carlo_real.csv
Simulation_6/: Plot_history.ipynb  analytic_solution.cpp  monte_carlo_simulation.cpp
Simulation_6/output/: analytic.csv  monte_carlo.csv
Simulation_7/: Plot_history.ipynb  analytic_solution.cpp  monte_carlo_simulation.cpp  monte_carlo_simulation_backup.cpp
Simulation_7/output/: analytic.csv  monte_carlo.csv  monte_carlo_2.csv
Simulation_8/: Plot_history.ipynb  analytic_solution.cpp  monte_carlo_simulation.cpp
Simulation_8/output/: analytic.csv  monte_carlo.csv
