cmake_minimum_required(VERSION 3.18..3.20)

project(mymodule)

# Set C++17 standard
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Find the xtensor package
find_package(xtensor REQUIRED)

# Add executable targets
add_executable(Simulation_01_analytic_solution Simulation_01/analytic_solution.cpp)
add_executable(Simulation_01_monte_carlo_simulation Simulation_01/monte_carlo_simulation.cpp)
add_executable(Simulation_02_analytic_solution Simulation_02/analytic_solution.cpp)
add_executable(Simulation_02_monte_carlo_simulation Simulation_02/monte_carlo_simulation.cpp)
add_executable(Simulation_03_analytic_solution Simulation_03/analytic_solution.cpp)
add_executable(Simulation_03_monte_carlo_simulation Simulation_03/monte_carlo_simulation.cpp)
add_executable(Simulation_04_analytic_solution Simulation_04/analytic_solution.cpp)
add_executable(Simulation_04_monte_carlo_simulation Simulation_04/monte_carlo_simulation.cpp)
# add_executable(Simulation_5_analytic_solution Simulation_5/analytic_solution.cpp)
add_executable(Simulation_5_monte_carlo_simulation Simulation_5/monte_carlo_simulation.cpp)
add_executable(Simulation_5_test Simulation_5/test.cpp)
add_executable(Simulation_6_analytic_solution Simulation_6/analytic_solution.cpp)
add_executable(Simulation_6_monte_carlo_simulation Simulation_6/monte_carlo_simulation.cpp)
add_executable(Simulation_6_test Simulation_6/test.cpp)
add_executable(Simulation_7_analytic_solution Simulation_7/analytic_solution.cpp)
add_executable(Simulation_7_monte_carlo_simulation Simulation_7/monte_carlo_simulation.cpp)
add_executable(Simulation_8_analytic_solution Simulation_8/analytic_solution.cpp)
add_executable(Simulation_8_monte_carlo_simulation Simulation_8/monte_carlo_simulation.cpp)

# Link xtensor library
target_link_libraries(Simulation_01_analytic_solution PUBLIC xtensor pthread)
target_link_libraries(Simulation_01_monte_carlo_simulation PUBLIC xtensor pthread)
target_link_libraries(Simulation_02_analytic_solution PUBLIC xtensor pthread)
target_link_libraries(Simulation_02_monte_carlo_simulation PUBLIC xtensor pthread)
target_link_libraries(Simulation_03_analytic_solution PUBLIC xtensor pthread)
target_link_libraries(Simulation_03_monte_carlo_simulation PUBLIC xtensor pthread)
target_link_libraries(Simulation_04_analytic_solution PUBLIC xtensor pthread)
target_link_libraries(Simulation_04_monte_carlo_simulation PUBLIC xtensor pthread)
# target_link_libraries(Simulation_5_analytic_solution PUBLIC xtensor pthread)
target_link_libraries(Simulation_5_monte_carlo_simulation PUBLIC xtensor pthread)
target_link_libraries(Simulation_5_test PUBLIC xtensor pthread)
target_link_libraries(Simulation_6_analytic_solution PUBLIC xtensor pthread)
target_link_libraries(Simulation_6_monte_carlo_simulation PUBLIC xtensor pthread)
target_link_libraries(Simulation_6_test PUBLIC xtensor pthread)
target_link_libraries(Simulation_7_analytic_solution PUBLIC xtensor pthread)
target_link_libraries(Simulation_7_monte_carlo_simulation PUBLIC xtensor pthread)
target_link_libraries(Simulation_8_analytic_solution PUBLIC xtensor pthread)
target_link_libraries(Simulation_8_monte_carlo_simulation PUBLIC xtensor pthread)

# Link the filesystem library if necessary (GCC < 9 might need this)
if(${CMAKE_CXX_COMPILER_ID} STREQUAL "GNU")
    if(CMAKE_CXX_COMPILER_VERSION VERSION_LESS 9.0)
        target_link_libraries(Simulation_01_analytic_solution PUBLIC stdc++fs)
        target_link_libraries(Simulation_01_monte_carlo_simulation PUBLIC stdc++fs)
        target_link_libraries(Simulation_02_analytic_solution PUBLIC stdc++fs)
        target_link_libraries(Simulation_02_monte_carlo_simulation PUBLIC stdc++fs)
        target_link_libraries(Simulation_03_analytic_solution PUBLIC stdc++fs)
        target_link_libraries(Simulation_03_monte_carlo_simulation PUBLIC stdc++fs)
        target_link_libraries(Simulation_04_analytic_solution PUBLIC stdc++fs)
        target_link_libraries(Simulation_04_monte_carlo_simulation PUBLIC stdc++fs)
        # target_link_libraries(Simulation_5_analytic_solution PUBLIC stdc++fs)
        target_link_libraries(Simulation_5_monte_carlo_simulation PUBLIC stdc++fs)
        target_link_libraries(Simulation_5_test PUBLIC stdc++fs)
        target_link_libraries(Simulation_6_analytic_solution PUBLIC stdc++fs)
        target_link_libraries(Simulation_6_monte_carlo_simulation PUBLIC stdc++fs)
        target_link_libraries(Simulation_6_test PUBLIC stdc++fs)
        target_link_libraries(Simulation_7_analytic_solution PUBLIC stdc++fs)
        target_link_libraries(Simulation_7_monte_carlo_simulation PUBLIC stdc++fs)
        target_link_libraries(Simulation_8_analytic_solution PUBLIC stdc++fs)
        target_link_libraries(Simulation_8_monte_carlo_simulation PUBLIC stdc++fs)
    endif()
endif()
